[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Fonts/Titillium-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/Titillium-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Screens/World Selection Screen/World Selection.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI Elements/Buttons/play.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI Elements/Buttons/leaderboard.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI Elements/Buttons/widebutton.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -379.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Selected"]
anchor_left = 0.0263852
anchor_top = 0.0166667
anchor_right = 0.973615
anchor_bottom = 0.0566667
margin_top = -9.53674e-07
margin_bottom = -34.0
custom_fonts/font = SubResource( 1 )
text = "Title"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ByLabel" type="Label" parent="Selected"]
anchor_left = 0.0263852
anchor_top = 0.0765676
anchor_right = 0.973615
anchor_bottom = 0.126568
custom_fonts/font = SubResource( 2 )
text = "By: Name"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DescriptionLabel" type="Label" parent="Selected"]
anchor_left = 0.0263852
anchor_top = 0.133333
anchor_right = 0.973615
anchor_bottom = 0.833333
margin_top = -7.62939e-06
custom_fonts/font = SubResource( 3 )
text = "Description"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayButton" type="TextureButton" parent="Selected"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -163.0
margin_top = -84.0
margin_right = -89.0
margin_bottom = -10.0
texture_normal = ExtResource( 4 )
expand = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_bottom = 1.0
margin_right = 643.0
margin_bottom = -105.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="ScrollContainer"]
margin_right = 643.0
margin_bottom = 9.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
auto_height = true

[node name="LeaderboardContainer" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.419608, 0.419608, 0.419608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelsContainer" type="GridContainer" parent="LeaderboardContainer"]
anchor_left = 0.0195313
anchor_top = 0.0333333
anchor_right = 0.980469
anchor_bottom = 0.0866667
margin_top = -1.90735e-06
columns = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="RankLabel" type="Label" parent="LeaderboardContainer/LabelsContainer"]
margin_right = 150.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 5 )
text = "Rank"
align = 1
valign = 1

[node name="NameLabel" type="Label" parent="LeaderboardContainer/LabelsContainer"]
margin_left = 154.0
margin_right = 830.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "Name"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="LeaderboardContainer/LabelsContainer"]
margin_left = 834.0
margin_right = 984.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 5 )
text = "Score"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="LeaderboardContainer"]
anchor_left = 0.0195313
anchor_top = 0.0866667
anchor_right = 0.980469
anchor_bottom = 0.676667
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RankingsContainer" type="GridContainer" parent="LeaderboardContainer/ScrollContainer"]
margin_right = 984.0
margin_bottom = 2.0
size_flags_horizontal = 3
columns = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RankSpacing" type="Label" parent="LeaderboardContainer/ScrollContainer/RankingsContainer"]
margin_right = 150.0
margin_bottom = 2.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1

[node name="NameSpacing" type="Label" parent="LeaderboardContainer/ScrollContainer/RankingsContainer"]
margin_left = 154.0
margin_right = 830.0
margin_bottom = 2.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[node name="ScoreSpacing" type="Label" parent="LeaderboardContainer/ScrollContainer/RankingsContainer"]
margin_left = 834.0
margin_right = 984.0
margin_bottom = 2.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[node name="ExampleRankLabel" type="Label" parent="LeaderboardContainer/ScrollContainer/RankingsContainer"]
visible = false
margin_top = 6.0
margin_right = 150.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "1"
valign = 1

[node name="ExampleNameLabel" type="Label" parent="LeaderboardContainer/ScrollContainer/RankingsContainer"]
visible = false
margin_top = 6.0
margin_right = 150.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "Max"
valign = 1

[node name="ExampleScoreLabel" type="Label" parent="LeaderboardContainer/ScrollContainer/RankingsContainer"]
visible = false
margin_top = 6.0
margin_right = 150.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "10"
align = 2
valign = 1

[node name="PlayerRankContainer" type="HBoxContainer" parent="LeaderboardContainer"]
anchor_left = 0.0195313
anchor_top = 0.718333
anchor_right = 0.980469
anchor_bottom = 0.771667
margin_top = 3.05176e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerRankLabel" type="Label" parent="LeaderboardContainer/PlayerRankContainer"]
margin_right = 150.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 5 )
text = "-"
valign = 1

[node name="PlayerNameLabel" type="Label" parent="LeaderboardContainer/PlayerRankContainer"]
margin_left = 154.0
margin_right = 830.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "Name"
valign = 1

[node name="PlayerScoreLabel" type="Label" parent="LeaderboardContainer/PlayerRankContainer"]
margin_left = 834.0
margin_right = 984.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 2
valign = 1

[node name="ErrorMessageLabel" type="Label" parent="LeaderboardContainer"]
visible = false
anchor_right = 1.0
margin_top = 70.0
margin_bottom = 102.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "No entries to display..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="LeaderboardContainer"]
anchor_left = 0.0292969
anchor_top = 0.698333
anchor_right = 0.970703
anchor_bottom = 0.708333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnalyticsButton" type="TextureButton" parent="LeaderboardContainer"]
anchor_left = 0.737357
anchor_top = 0.856903
anchor_right = 0.957084
anchor_bottom = 0.961904
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="LeaderboardContainer/AnalyticsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
text = "Analytics Website"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardButton" type="TextureButton" parent="."]
anchor_left = 0.0247676
anchor_top = 0.865513
anchor_right = 0.344104
anchor_bottom = 0.96218
margin_right = -267.0
margin_bottom = 1.99982
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Selected/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="item_selected" from="ScrollContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="LeaderboardContainer/AnalyticsButton" to="." method="_on_AnalyticsButton_pressed"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
